--- a/templates/edit.xhtml
+++ b/templates/edit.xhtml
@@ -10,6 +10,7 @@
 			window.level_name = "#{name}";
 			window.map_data = #{level};
 		</script>
+		<link href="/favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 	<body>
 		<div id="frame">
