--- a/templates/play.xhtml
+++ b/templates/play.xhtml
@@ -2,6 +2,7 @@
 	<head>
 		<title>#{title}</title>
 		<link rel="stylesheet" type="text/css" href="/style.css" />
+		<link href="/favicon.ico" rel="icon" type="image/x-icon" />
 	</head>
 	<body onload="Init()" onresize="OnWindowResize()">
 		<div id="frame">
